static/css/deriv/modal.scss
@import "devices";
@import 'color';

.modal {
    position: fixed;
    display: flex;
    top: 0;
    left: 0;
    width: 100vw;
    height: 100vh;
    z-index: 10000;
    align-items: center;
    justify-content: center;
    overflow: scroll;
    &__container {
        width: 25rem;
        height: auto;
        background: $white;
        border: 1px solid #ddd;
        background: $white;
        color: #333;
        padding: 0.2rem;
        border-radius: 3px;
        @include mobile {
            width: 90vw !important;
        }
        z-index: 100;
    }
    &__header {
        border: 1px solid #2a3052;
        border-bottom-right-radius: 3px;
        background: #2a3052;
        color: $white;
        font-family: roboto, sans-serif;
        font-weight: 400;
        padding: 0.4rem 0.4rem 0.4rem 0.7rem;
        display: flex;
        justify-content: space-between;
        align-items: center;
        &-right {
            &-close {
                width: 1.5rem;
                height: 1.5rem;
                background: #2e8836;
                border-radius: 3px;
                display: flex;
                justify-content: center;
                align-items: center;
                color: $white;
                padding:0;
                font-size: 1rem;
                &:after {
                    content: "\00d7";
                    font-weight: 200;
                    font-size: 18px;
                    margin-top: -2px;
                }
            }
        }
    }
    &__content {
        & .input-row {
            margin: 1rem 0;
        }
        & .reset_component{
            & p{
                    margin: 1rem 0.7rem 1.2rem;
            }
        }
    }
    &-reset{
     
        & .modal__container{
            width: 600px;
        }
        & .reset__footer{
            border-top:1px solid #ddd;
            margin-top: 0.5rem;
            padding: 0.3rem 0.4rem 0.2rem 1rem;
            width: 100%;
            display:flex;
            justify-content: end;
            & .button-primary{
                margin-right: 0;
            }
            & button{
                margin: 0.5rem 0.4rem 0.5rem 0;
                float: right;
                font-size: 1rem;
            }
        }
          &:after {
                content: '';
                position: fixed;
                top: 0;
                left: 0;
                height: 100vh;
                width: 100%;
                z-index: 0;
                background: #aaa;
                opacity: .3;
        }
    }
    &-logout, &-account-switcher{
        background: #aaaaaa4d;
        & .logout-dialog{
            padding:0 10px;
        }
        & .modal__container{
            width: 600px;
        }
        & .ui-widget-content{
            border:unset;
        }
        & .ui-dialog-buttonset{
            display: flex;
            justify-content: flex-end;
        }
        & .button-primary{
            height: 38px;
            margin-left: 5px;
        }
    }
    
}

